js代码块优化

--- a/1-1-ES6+.md
+++ b/1-1-ES6+.md
@@ -33,7 +33,7 @@ node中的js就是ES+nodeAPI（如fs、net、etc）。
 
 通过下面的例子可以充分的体会var的函数作用域以及其他特性。
 
-```
+```javascript
 if(true){
     var a = 'xiaodong'
 }
@@ -51,7 +51,7 @@ console.log(i) //4
 
 ##### let块级作用域及其它特性
 
-```
+```javascript
 if(true){
     let a = 'xiaodong'
 }
@@ -68,7 +68,7 @@ console.log(i) //i is not defined
 ```
 ##### let体会
 
-```
+```javascript
 var elements = [{}, {}, {}]
 for(var i = 0; i < elements.length; i++){
     elements[i].onclick = function(){
@@ -89,7 +89,7 @@ elements[0].onclick() //0
 
 通过闭包的形式，将每一次传给函数的i作为这个函数执行时的依赖单独保存起来。
 
-```
+```javascript
 var elements = [{}, {}, {}]
 for(var i = 0; i < elements.length; i++){
     elements[i].onclick = (function(i){
@@ -106,13 +106,13 @@ elements[0].onclick() //3
 在应用的例子中体会解构的用法
 1. 使用解构设置默认值，避免变量undefined
 
-```
+```javascript
 const [a=0, b=0] = [1];
 console.log(a,b);//1,0
 ```
 2. 使用解构交换两个变量的值
 
-```
+```javascript
 let [a, b] = [1, 2];//注意这里的省略号不能省略
 [a, b] = [b ,a]
 console.log(a, b)
