--- a/1-1-ES6+.md
+++ b/1-1-ES6+.md
@@ -1,8 +1,6 @@
 # ES6+
 
-## ES、JS概述
-
-### 什么是ES？什么是JS？ES和JS之间的关系？
+## 什么是ES？什么是JS？ES和JS之间的关系？
 
 ECMAScript也是一门脚本语言，简写为ES，通常会把它看为JavaScript的标准化规范，事实上js是ES的扩展语言。ES只是单纯的语言，js是这门语言的扩展，使我们可以在浏览器中操作BOM和DOM；在node中可以去做读写文件的操作。
 
@@ -10,9 +8,9 @@ ECMAScript也是一门脚本语言，简写为ES，通常会把它看为JavaScri
 
 node中的js就是ES+nodeAPI（如fs、net、etc）。
 
-### ES新特性
+## ES新特性
 
-#### let与块级作用域、const
+### let与块级作用域、const
 
 作用域：函数作用域、全局作用域、块级作用域（ES6新增）
 
@@ -22,14 +20,14 @@ node中的js就是ES+nodeAPI（如fs、net、etc）。
 
 在ES6之后声明变量的关键字有三个var、let、const。
 
-##### var和let和const
+#### var和let和const
 - var：函数作用域；变量声明提升；可以重复定义；声明的变量会作为window的属性。
 - let：块级作用域；不会声明提升；不可以重复定义；不会作为window的属性。
 - const：在let的基础上添加了只读（浅层只读，深层可读写）的属性。再声明的时候必须同时进行初始化。
 
 编程建议：主用const、配合使用let，不用var。
 
-##### var函数作用域及其它特性
+#### var函数作用域及其它特性
 
 通过下面的例子可以充分的体会var的函数作用域以及其他特性。
 
@@ -49,7 +47,7 @@ console.log(i) //4
 ```
 通过if可以模拟一个for循环的过程,可以清晰的看到for循环的两层作用域。
 
-##### let块级作用域及其它特性
+#### let块级作用域及其它特性
 
 ```javascript
 if(true){
@@ -66,7 +64,7 @@ for(let i = 0; i < 3; i++){
 }//0 1 2 0 1 2 0 1 2
 console.log(i) //i is not defined
 ```
-##### let体会
+#### let体会
 
 ```javascript
 var elements = [{}, {}, {}]
@@ -85,7 +83,7 @@ for(let i = 0; i < elements.length; i++){
 }
 elements[0].onclick() //0
 ```
-##### let闭包实现
+#### let闭包实现
 
 通过闭包的形式，将每一次传给函数的i作为这个函数执行时的依赖单独保存起来。
 
@@ -99,9 +97,9 @@ for(var i = 0; i < elements.length; i++){
 elements[0].onclick() //3
 ```
 
-#### 解构
+### 解构
 
-##### 数组解构
+#### 数组解构
 
 在应用的例子中体会解构的用法
 1. 使用解构设置默认值，避免变量undefined
@@ -115,8 +113,109 @@ console.log(a,b);//1,0
 ```javascript
 let [a, b] = [1, 2];//注意这里的省略号不能省略
 [a, b] = [b ,a]
-console.log(a, b)
+console.log(a, b) //2, 1
+```
+#### 对象解构
+
+1. 对象解构赋值
+
+```javascript
+const {name, age} = {name:'xiaodong', age:18};
+console.log(name, age) // xiaodong 18
 ```
 
+2. 对象解构重命名赋值
 
-##### 对象解构
+```javascript
+const obj = {name:'xiaodong', age:18};
+const {name:myname, age:myage} = obj;
+console.log(myname, myage) // xiaodong 18
+```
+
+3. 解构示例
+
+```javascript
+const name = 'xiaodong'
+const {log} = console;
+log(name) //xiaodong
+```
+
+### 模板字符串及标签函数
+
+#### 模板字符串相对传统字符串的区别：
+
+1. 支持换行。（再写html字符串的时候非常好用）
+2. 支持插值表达式。
+
+```javascript
+const [title1, title2] = ['xiaodong', 'lili']
+const innerhtml = `
+    <h1>${title1}</h1>
+    <h1>${title2}<h1>
+`
+```
+
+#### 标签函数
+
+字符串标签就相当于一个函数，给字符串添加标签就相当于调用这个函数，这个函数会接受一个数组参数，这个数组是字符串分解的元素组成的。
+
+```javascript
+const [name, age] = ['xiaodong', 18]
+function tagFunc(strings, name, age){
+    console.log(strings) //[ '我叫', '，今年', '岁' ]
+    console.log(name) //xiaodong
+    console.log(age) //18
+    return strings[0] + name + strings[1] + age + strings[2]
+}
+//result最终的值就是tagFunc函数的返回值，如果标签函数没有返回值，result就是undefined
+const result = tagFunc`我叫${name}，今年${age}岁`
+console.log(result) //我叫xiaodong，今年18岁
+```
+可以看到，模板标签的作用就是对字符串进行加工并返回加工结果。
+
+应用：模板引擎、实现中英文切换（具体怎么实现？demo？）
+
+### 字符串扩展方法
+
+#### String.include()
+
+判断字符串是否包含某个字符串，返回布尔值。
+
+#### String.startsWidth()
+
+判断字符串是否以某个字符串开始，返回布尔值。
+
+#### String.endsWidth()
+
+判断字符串是够以某个字符串结尾，返回布尔值。
+
+ES6之前只能用indexOf或者正则表达式
+
+### 函数参数默认值
+
+```javascript
+function foo(name = 'xiaodong'){
+    console.log(name);
+}
+foo() //xiaodong
+```
+
+*需要注意的是当函数有多个参数，添加默认值的参数需要放在最后面*
+
+之前只能在函数体中通过if逻辑判断来处理参数默认值的问题。
+
+### 剩余参数
+
+```javascript
+function foo(first, ...args){
+    console.log(first);
+    console.log(args)
+}
+foo(1, 2, 3)
+//1
+//[ 2, 3 ]
+```
+
+*注意当函数接收不只一个剩余参数的时候，需要把剩余参数放到参数的最后面，而且一个函数只能接收一个剩余参数*
+
+很多方法函数都是可以接收任意个参数，例如`congsole.log()`，在ES6之前只能在函数中通过`arguments`对象来使用。（这个`arguments`是一个伪数组）
