--- a/1-1-ES6+.md
+++ b/1-1-ES6+.md
@@ -177,15 +177,15 @@ console.log(result) //我叫xiaodong，今年18岁
 
 ### 字符串扩展方法
 
-#### String.include()
+#### 1. String.include()
 
 判断字符串是否包含某个字符串，返回布尔值。
 
-#### String.startsWidth()
+#### 2. String.startsWidth()
 
 判断字符串是否以某个字符串开始，返回布尔值。
 
-#### String.endsWidth()
+#### 3. String.endsWidth()
 
 判断字符串是够以某个字符串结尾，返回布尔值。
 
