--- a/1-1-ES6+.md
+++ b/1-1-ES6+.md
@@ -281,11 +281,13 @@ person.sayNameAsync1() //我的名字是undefined
 person.sayNameAsync2() //我的名字是xiaodong
 ```
 
-`setTimeout`里面的回调函数最终会被放到全局对象上面被调用，所以当以传统的方式写这个回调函数，当这个回调函数在全局对象上面执行的时候，这个函数的`this`就会指向这个全局对象，自然而然的就是`undefined`。但是当用箭头函数，`this`的指向并不会发生影响，箭头函数中的`this`和外面的`this`是相同的，所以这里面的`this`就会指向这个`person`对象。
+`setTimeout`里面的回调函数最终会被放到全局对象上面被调用，所以当以传统的方式写这个回调函数，当这个回调函数在全局对象上面执行的时候，这个函数的`this`就会指向这个全局对象，自然而然的就是`undefined`。
 
-另一点，当用箭头函数的时候这个回调函数依然会被全局对象调用，但是这里面的这个`this`会产生闭包，也就是说这里的`this`会作为回调函数这个方法的一个执行依赖被单独保存在内存当中而不会随着作用域的生命周期结束销毁。
+但是当用箭头函数，`this`的指向并不会发生影响，箭头函数中的`this`取决于上一级`sayNameAsync2`的执行上下文环境，所以这里面的`this`就会指向这个`person`对象。
 
-再ES6之前，也就是使用传统`function`定义函数的时候，要想实现，只能在这个回调函数外面`conost _this = this`,然后用`_this`去取`person`中的属性。
+在ES6之前，也就是使用传统`function`定义函数的时候，要想实现，只能在这个回调函数外面`conost _this = this`,然后用`_this`去取`person`中的属性。
+
+补充一点感觉很关键##在js中有这个说法，看函数的归属，看它在哪定义，找内部this看它在哪执行##
 
 ### 对象字面量增强
 
@@ -518,4 +520,123 @@ TypeError: 'set' on proxy: trap returned falsish for property '0'
 **3. Proxy是以非侵入的方式监管了对象的读写**
 
 即，不需要对对象本身去做任何的操作，就可以监视到它内不成员的读写；而Object.defineProperty就需要通过特定的方式单独去定义对象当中那些需要被监视的属性。
+
+### Reflect
+
+`Reflect`统一了操作对象的方法。
+
+使用java的方式解读这个`Reflect`，它是一个静态类，不能通过new的方式去构建实例对象，只能够调用它的一些静态方法。类似于js的Math对象。
+
+`Reflect`静态对象上面挂载了14个（被废弃一个还有13个）用于操作对象的静态方法。
+这13种方法对应proxy对应的13个handle处理方法，`reflect`上面的方法就是proxy对应处理方法的默认处理方法。 
+
+##`Reflext`成员方法就是`Proxy`处理对象的默认实现##
+
+```javascript
+const person = {
+    name:'xiaodong',
+    age:18
+}
+const personProxy = new Proxy(person, {
+    //当这里面的各种处理函数没有被重定义的时候，他们的默认执行方法就是Reflext对象的静态方法
+    //所以一个标准的写法就是，当我们使用自己重定义的处理函数对对象进行监视和数据处理的时候，最终需要调用一次Reflect的静态方法，来保持执行函数的默认功能。
+})
+```
+
+```javascript
+const person = {
+    name:'xiaodonng',
+    age:18
+}
+console.log(Reflect.has(person, 'name')) // true
+console.log(Reflect.deleteProperty(person, 'age')) // true
+console.log(Reflect.ownKeys(person)) // [ 'name' ]
+```
+
+### Promise
+
+后面会有详细介绍，现在先看这篇博客吧[https://blog.csdn.net/fangxuan1509/article/details/103729011](https://blog.csdn.net/fangxuan1509/article/details/103729011)
+
+### class类
+
+ES6之前ECMAScript是通过定义函数以及函数的原型对象来去实现类型，例如：
+
+```javascript
+function Person(name){
+    //通过this访问当前的实力对象
+    this.name = name
+}
+//在这个类型所有的实例之间去共享一些成员，可以使用函数对象的prototype（原型）去实现
+Person.prototype.say = function(){
+    console.log(`hey, my name is ${this.name}`)
+}
+const xiaodong = new Person('xiaodong')
+xiaodong.say()
+```
+
+class给了一个更加清晰的声明类的方式。
+
+```javascript
+class Person {
+    constructor(name){ // 当前类型的构造函数，可以在这个构造函数中使用this去访问当前类型的实例对象
+        this.name = name
+    }
+    say(){
+        console.log(`my name is ${this.name}`)
+    }
+}
+const xiaodong = new Person('xiaodong');
+xiaodong.say() // my name is xiaodong
+```
+
+### 静态方法
+ 
+与之相对应的概念叫实例方法，实例方法是通过这个类型构造的实例对象去调用；对象方法是直接通过类型本身去调用就可以。
+
+之前我们定义静态方法是直接在构造函数的对象上挂载方法，因为js中函数也是一个对象，也可以给这个对象添加一些方法成员。
+
+在ES6中新增加了一个专门声明静态成员方法的关键词 `static`
+
+##继续说，由于静态方法是直接挂载到构造对象上面的方法成员，因此静态方法中的this就不会指向当前new的实例，而是一直指向构造对象。##
+
+```javascript
+class Person {
+    constructor(name){
+        this.name = name
+    }
+    say(){
+        console.log(`my name is ${this.name}`)
+    }
+    static create(name){
+        return new Person(name)
+    }
+}
+
+const xiaodong = Person.create('xiaodong')
+xiaodong.say() // my name is xiaodong
+```
+
+### 类的继承
+
+在ES6之前通常是使用原型的方式实现继承，怎么实现呢？
+
+new的步骤：
+
+1. 创建空对象；
+```javascript
+var obj = {};
+```
+2. 构建原型链,
+设置新对象的constructor属性为构造函数的名称，设置新对象的__proto__属性指向构造函数的prototype对象；
+```javascript
+　　obj.__proto__ = Person.prototype;
+```
+3. 执行构造函数中的代码，构造函数中的this指向new出对象
+4. 返回对象，并赋给等号左边的变量
+
+附一张原型链图解：
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20191203145610499.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Zhbmd4dWFuMTUwOQ==,size_16,color_FFFFFF,t_70)
+
+和我的一篇博客https://blog.csdn.net/fangxuan1509/article/details/103361178
 
