--- a/1-1-ES6+.md
+++ b/1-1-ES6+.md
@@ -283,11 +283,11 @@ person.sayNameAsync2() //我的名字是xiaodong
 
 `setTimeout`里面的回调函数最终会被放到全局对象上面被调用，所以当以传统的方式写这个回调函数，当这个回调函数在全局对象上面执行的时候，这个函数的`this`就会指向这个全局对象，自然而然的就是`undefined`。
 
-但是当用箭头函数，`this`的指向并不会发生影响，箭头函数中的`this`取决于上一级`sayNameAsync2`的执行上下文环境，所以这里面的`this`就会指向这个`person`对象。
+但是当用箭头函数，`this`的指向并不会发生影响，**箭头函数中的`this`取决于上一级`sayNameAsync2`的执行上下文环境**，所以这里面的`this`就会指向这个`person`对象。
 
 在ES6之前，也就是使用传统`function`定义函数的时候，要想实现，只能在这个回调函数外面`conost _this = this`,然后用`_this`去取`person`中的属性。
 
-补充一点感觉很关键##在js中有这个说法，看函数的归属，看它在哪定义，找内部this看它在哪执行##
+补充一点感觉很关键**在js中有这个说法，看函数的归属，看它在哪定义，找内部this看它在哪执行**
 
 ### 对象字面量增强
 
