--- a/1-1-ES6+.md
+++ b/1-1-ES6+.md
@@ -595,7 +595,7 @@ xiaodong.say() // my name is xiaodong
 
 之前我们定义静态方法是直接在构造函数的对象上挂载方法，因为js中函数也是一个对象，也可以给这个对象添加一些方法成员。
 
-在ES6中新增加了一个专门声明静态成员方法的关键词 `static`
+在ES6中新增加了一个专门声明静态成员方法的关键词 `static`。
 
 ##继续说，由于静态方法是直接挂载到构造对象上面的方法成员，因此静态方法中的this就不会指向当前new的实例，而是一直指向构造对象。##
 
@@ -618,7 +618,38 @@ xiaodong.say() // my name is xiaodong
 
 ### 类的继承
 
-在ES6之前通常是使用原型的方式实现继承，怎么实现呢？
+在ES6之前通常是使用原型的方式实现继承。
+
+
+用class实现继承
+
+```javascript
+class Person {
+    constructor(name){
+        this.name = name
+    }
+    say(){
+        console.log(`my name is ${this.name}`)
+    }
+    static aaa(){
+        console.log(1)
+    }
+}
+class Student extends Person {
+    constructor(name, number){
+        super(name);
+        this.number = number;
+    }
+    hello(){
+        console.log(`my number is ${this.number}`)
+    }
+}
+const s = new Student('xiaodong')
+s.say() // my name is xiaodong
+s.aaa() // TypeError: s.aaa is not a function
+```
+
+**静态方法不会继承，Person的静态方法只能通过Person.aaa()来调用**
 
 new的步骤：
 
@@ -640,3 +671,203 @@ var obj = {};
 
 和我的一篇博客https://blog.csdn.net/fangxuan1509/article/details/103361178
 
+### Set数据结构
+
+set类似于一个数组，区别就是set中的成员是不允许出现重复的，如果重复添加就会在添加的过程中被忽略掉。
+
+```javascript
+const s = new Set()
+s.add(1).add(2).add(3).add(2)
+console.log(s) // Set { 1, 2, 3 }
+
+s.forEach(item => {
+    console.log(item) // 1 2 3
+})
+for(item of s){
+    console.log(item) // 1 2 3
+}
+
+console.log(s.size) // 3
+console.log(s.has(2)) // true
+console.log(s.delete(2)) // true
+console.log(s) // Set { 1, 3 }
+console.log(s.clear()) // undefined
+console.log(s) // Set {}
+```
+
+使用set数组去重
+```javascript
+let arr = [1, 2, 3, 4, 5, 6, 3, 4, 5, 7, 1, 2, 0]
+const s = new Set(arr)
+// arr = Array.from(s)
+arr = [...s]
+console.log(arr) // [ 1, 2, 3, 4, 5, 6, 7, 0 ]
+```
+
+### Map数据解构
+
+之前的对象的键只能是字符串类型，map的键可以是任意类型。
+
+如果ES5中的对象的键是一个非字符串类型，就会自动的将其转换为字符串作为键保存。
+
+一个需求，保存一份成绩单，每个学生是一个对象并分别对应自己的各科学习成绩。那就得使用ES6中的map，键位不同的学生对象，对应的值位每一个学生的各科成绩。
+
+```javascript
+const m = new Map()
+m.set({
+    name:'xiaodong',
+    gender:'male'
+},{
+    english:'4',
+    Mathematics:'100'
+})
+m.forEach((value, key, target) => {
+    console.log(value) // { english: '4', Mathematics: '100' }
+    console.log(key) // { name: 'xiaodong', gender: 'male' }
+    console.log(target) // Map { { name: 'xiaodong', gender: 'male' } => {  english: '4', Mathematics: '100' } }
+})
+```
+
+### Symbol
+
+表示一个独一无二的值。也就是说通过Symbol创建的每一个值都是唯一的。
+
+从ES6开始普通对象的键可以有两种类型，一种是字符串一种是Symbol。
+
+Symbol作为属性名可以避免属性名冲突的问题（目前最主要的作用）
+
+```javascript
+const obj = {
+    [Symbol()]:'hahah'
+}
+console.log(obj)
+```
+
+模拟实现对象的私有成员
+
+```javascript
+const name = Symbol();
+const obj = {
+    [name]:'xiaodong',
+    say(){
+        console.log(this[name])
+    }
+}
+obj.say()
+```
+
+由于symbol是唯一的，所以我们不可能在创建一个symbol去获取obj的对应属性，因此就可以实现对象的私有成员。
+
+**截至ES2019一共有7种原始数据类型**
+
+`boolean` `null` `undefined` `number` `string` `symbol` `object`
+
+**未来还会新增一种叫BigInt的数据类型存放更长的数字**
+
+`bigint`
+
+#### Symbol补充
+
+Symbol(String)可以接收一个字符串参数，作为该负好的说明，但是就说说明一样的Symbol也是不同的两个数据。
+
+Symbol可以使用Symbol.for(String)的方法，该方法传入一个字符串参数，相同的字符串参数会返回相同的Symbol。
+
+```javascript
+const s1 = Symbol('aaa')
+const s2 = Symbol('aaa')
+console.log(s1 === s2) // false
+```
+
+```javascript
+const s1 = Symbol.for('aaa')
+const s2 = Symbol.for('aaa')
+console.log(s1 === s2) // true
+```
+
+这个方法内部维护了一个全局的注册表位字符串和Symbol值提供了一个一一对应的关系。
+
+**需要注意的是在这个方法里面维护的是字符串和Symbol对应的关系，如果传入的参数不是一个字符串，它会自动的转换成字符串**也就会造成：
+
+```javascript
+const s1 = Symbol.for('true')
+const s2 = Symbol.for(true)
+console.log(s1 === s2) // true
+```
+
+**Symbol补充中的Symbol标识符是干什么的没听懂？**
+
+- 通过Symbol实现的属性名是不能通过for in遍历拿到的。
+
+- 通过Object.ownKeys()也是拿不到的。
+
+- 通过JSON.stringify()去格式化对象也是会将Symbol属性忽略掉。
+
+综上所述：Symbol非常适合作为对象的私有属性。
+
+获取Symbol属性需要使用Object.getOwnPropertySymbols(obj)，来单独的获取Symbol属性，注意这个方法也只能获取Symbol属性，其他属性获取不到。
+
+### fo...of循环
+
+for比较适合遍历普通的数组，for...in循环比较适合遍历键值对。
+再有就是一些方法如forEach()方法。
+
+for...of循环可以作为遍历所有数据结构的统一的遍历方式。
+
+for...of可以随时使用break方法终止循环，但是arr.forEach()不能通过break终止。
+
+arr.some(),arr.every()可以通过返回true和false的方式终止循环。
+
+for...of遍历数组获取到item就是数组的元素。
+
+使用for...of遍历数组和map之间的差异
+
+```javascript
+const m = new Map()
+m.set({
+    name:'xiaodong',
+    gender:'male'
+},{
+    english:'4',
+    Mathematics:'100'
+})
+for(item of m){
+    console.log(item) // [ { name: 'xiaodong', gender: 'male' }, { english: '4', Mathematics: '100' } ]
+}
+```
+
+可以看到for...of遍历map拿到的是一个个的数组，所以我们就可以利用数组解构的方式直接获取到他的键或者值。
+
+```javascript
+for([key, value] of m){
+    console.log(key) // { name: 'xiaodong', gender: 'male' }
+    console.log(value) // { english: '4', Mathematics: '100' }
+}
+```
+
+for...of遍历普通对象(会报错)
+
+```javascript
+const obj = { a:1, b:2 }
+for(item of obj){
+    console.log(item)
+}
+// TypeError: obj is not iterable
+```
+
+**可迭代接口Iterable的实现**是for...of遍历的前提，反过来说能用for...of遍历的数据结构内部都已经实现了这个可迭代的接口。 
+
+for...of循环的实现原理,就是去调用被便利对象的iterator方法得到一个迭代器，然后循环执行这个迭代器的next()方法去遍历所有的数据。
+
+```javascript
+const s = new Set([1, 2, 3])
+const iterator = s[Symbol.iterator]()
+
+console.log(iterator.next())
+console.log(iterator.next())
+console.log(iterator.next())
+console.log(iterator.next())
+```
+
+#### **实现可迭代接口**
+
+实际上就是在对象中挂在一个iterator方法，然后在这个方法中返回一个迭代器对象。
