更新异步编程

--- a/1-2-JS异步编程.md
+++ b/1-2-JS异步编程.md
@@ -50,4 +50,6 @@
 
 其实js确实是单线程的，但是浏览器是多线程的，而且通过js调用的某些浏览器的api也不是单线程的，例如延时器api，浏览器里面会有一个单独用于倒计时的线程，专门用来倒计时，等到倒计时完成的时候将倒计时器的回调函数添加到消息队列。 
 
-再次强调一下，js就是单线程，它的程序只能在js那一个线程中执行，只不过对于浏览器的一些用js调用的api会在浏览器中单独的一个线程单独执行。我们说的同步模式和异步模式也是相对于运行环境提供的API而言的。
+再次强调一下，js就是单线程，它的程序只能在js那一个线程中执行，只不过对于浏览器的一些用js调用的api会在浏览器中单独的一个线程单独执行。
+
+我们说的同步模式和异步模式也是相对于运行环境提供的API而言的。
