--- a/1-2-JS异步编程.md
+++ b/1-2-JS异步编程.md
@@ -13,8 +13,8 @@
 - 同步模式和异步模式
 - 事件循环与消息队列
 - 异步编程的几种方式
-- Promise异步方案、宏任务/微任务队列
-- Generator异步方案、Async/Await语法糖
+- `Promise`异步方案、宏任务/微任务队列
+- `Generator`异步方案、`Async/Await`语法糖
 
 ## 同步模式
 
@@ -35,13 +35,13 @@
 首先大体了解一下这块代码，代码中首尾两个console.log,中间显示一个延时器函数，然后接着又是一个延时器函数，在第二个延时器函数里面又嵌套了一个延时器。下面来解释这块代码是如何执行的。
 
 1. 首先，将一个匿名的函数调用压入调用栈（Call stack）中；
-2. 对于console.log()这种同步执行的api，直接将其压入调用栈，紧接着执行完之后弹出栈，并在执行的过程中在控制台输出‘global begin’;
-3. 然后就会执行到第一个延时器函数，首先还是先将setTimeout压入调用栈，这个函数内部的api是以异步的方式执行的，调用函数里面的异步api就会在Web APIs中添加一个倒计时器，并把这个倒计时器放到一边，这个倒计时器是在一个单独的专门执行异步线程中，在这个倒计时器放进去之后就开始倒计时了，而且他会被扔在一旁并不影响js线程的正常执行。
+2. 对于`console.log()`这种同步执行的api，直接将其压入调用栈，紧接着执行完之后弹出栈，并在执行的过程中在控制台输出‘global begin’;
+3. 然后就会执行到第一个延时器函数，首先还是先将`setTimeout`压入调用栈，这个函数内部的api是以异步的方式执行的，调用函数里面的异步api就会在Web APIs中添加一个倒计时器，并把这个倒计时器放到一边，这个倒计时器是在一个单独的专门执行异步线程中，在这个倒计时器放进去之后就开始倒计时了，而且他会被扔在一旁并不影响js线程的正常执行。
 4. 当第一个延时器被放到另一个计时器线程中之后，程序会立即继续向下执行，开始第二个延时器的执行，和第一个延时器一样，在Web APIs中添加一个倒计时器，程序继续向下执行。
-5. 将console.log压入调用栈，在控制台打印‘global end’。
-6. 当执行完最后一步console.log，调用栈中就会空闲，当Web APIs中的倒计时器执行倒计时完成的时候，就会触发其回调函数的调用，将回调函数添加到消息队列中（Queue），时间环（Event loop）会同时的监听调用栈和消息队列，当调用栈空闲并且消息队列中又待处理的消息的时候，时间环就会将消息队列中的第一个消息交给调用栈去处理。这里的第一个延时器显然要晚于第二个延时器，所以第二个延时器先倒计时完之后先将第二个定时器的回调函数添加到消息队列中等待执行，等到事件环监听到调用栈空闲的时候就会将消息队列中的第一条消息交给调用栈，也就是第二个定时器的回调开始执行，打印‘time2 invoke’。
-7. 和第一个延时器一样，第二个延时器的回调也会添加一个延时器到专门倒计时的线程中倒计时。
-8. 这个时候第一个延时器已经倒计时完成，进行和第二个延时器相同的操作之后打印‘teimer1 invoke’.
+5. 将`console.log`压入调用栈，在控制台打印‘global end’。
+6. 当执行完最后一步`console.log`，调用栈中就会空闲，当Web APIs中的倒计时器执行倒计时完成的时候，就会将回调函数添加到消息队列中（Queue），事件环（Event loop）会同时的监听调用栈和消息队列，当调用栈空闲并且消息队列中又待处理的消息的时候，事件环就会将消息队列中的第一个消息交给调用栈去处理。这里的第一个延时器显然要晚于第二个延时器，所以第二个延时器先倒计时完之后先将第二个定时器的回调函数添加到消息队列中等待执行，等到事件环监听到调用栈空闲的时候就会将消息队列中的第一条消息交给调用栈，也就是第二个定时器的回调开始执行，打印‘time2 invoke’。
+7. 和第二个延时器一样，第一个延时器的回调也会添加一个延时器到专门倒计时的线程中倒计时。
+8. 当第一个延时器倒计时完成，进行和第二个延时器相同的操作之后打印‘teimer1 invoke’.
 9. 然后第二个延时器中的延时器也会进行相同的操作之后打印‘inner invoke’。
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200517223119142.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Zhbmd4dWFuMTUwOQ==,size_16,color_FFFFFF,t_70)
