添加代码符

--- a/1-2-JS异步编程.md
+++ b/1-2-JS异步编程.md
@@ -64,7 +64,7 @@
 
 为了避免回调地狱，CommonJS社区提出了Promise的规范，为异步编程提供一种更加合理的编码规范。并在后来在ES2015中被标准化，成为语言规范。
 
-Promise其实就是一个对象，用于表示一个任务执行完之后是成功还是失败。有三种状态，Pending、Fullfilled、Rejected。当状态有pending变更之后，不管是成功或者是失败都会有对应的任务去根据最终的状态进行相应的处理程序。
+`Promise`其实就是一个对象，用于表示一个任务执行完之后是成功还是失败。有三种状态，`Pending`、`Fullfilled`、`Rejected`。当状态有`pending`变更之后，不管是成功或者是失败都会有对应的任务去根据最终的状态进行相应的处理程序。
 
 ### 特点：
 对象的状态不受外界影响。`Promise`对象代表一个异步操作，有三种状态：`pending`（进行中）、`fulfilled`（已成功）和`rejected`（已失败）。只要异步操作的结果可以决定当前是哪一种状态，任何其他操作都无法改变这个状态。这也是Promise这个名字的由来。
@@ -187,16 +187,16 @@ ajax('data/user.json').then(function(res){
 })
 ```
 
-- Promise对象的then方法会默认返回一个全新的Promise对象。
-- 后面的then方法就是为上一个then返回的Promise注册回调。
-- 前面then方法回调函数的返回值会作为后面then方法回调的参数，如果没有返回参数值为undefined。
-- 如果回调中返回的是一个新的Promise，那后面的then方法的回调会等待它的结束。
+- Promise对象的``then``方法会默认返回一个全新的Promise对象。
+- 后面的`then`方法就是为上一个`then`返回的Promise注册回调。
+- 前面`then`方法回调函数的返回值会作为后面`then`方法回调的参数，如果没有返回参数值为`undefined`。
+- 如果回调中返回的是一个新的Promise，那后面的`then`方法的回调会等待它的结束。
 
 ### Promise异常回调
 
-我们知道当Promise的结果一旦失败就会调用在then方法传入的onRejected回调。这个失败可能是Promise里面的执行程序报错也有可能是手动抛出异常。
+我们知道当Promise的结果一旦失败就会调用在`then`方法传入的`onRejected`回调。这个失败可能是Promise里面的执行程序报错也有可能是手动抛出异常。
 
-除了使用then的第二个参数作为onRejected回调之外还可以使用.cath()链式回调。
+除了使用then的第二个参数作为`onRejected`回调之外还可以使用`.cath()`链式回调。
 
 ```javascript
 ajax('data/user.json').then(function(res){
@@ -220,7 +220,7 @@ ajax('data/user.json').then(function(res){
 })
 ```
 
-由上面的代码可以知道，其实.catch()虽然可以作为Promise失败的回调，但是实际上，它是他前面的.then()返回的Promise的失败的回调。因为这是在同一个Promise的链条上面，第一个Promise的异常状态会一直往下传递。所以在.catch()中才能捕获到第一个Promise中的错误。
+由上面的代码可以知道，其实`.catch()`虽然可以作为Promise失败的回调，但是实际上，它是他前面的`.then()`返回的Promise的失败的回调。因为这是在同一个Promise的链条上面，第一个Promise的异常状态会一直往下传递。所以在`.catch()`中才能捕获到第一个Promise中的错误。
 
 **Promise上面的异常会一直向下传递知道被捕获**
 
@@ -243,7 +243,7 @@ ajax('data/user.json').then(function(res){
 当`.catch()`捕获到前面的异常并成功执行完处理程序并且没有再发生异常的时候，就会触发下一个`.then()`。
 
 **unhandledrejection**
-我们可以在全局对象上注册一个unhandledrejection事件，去处理那些代码中没有被手动捕获的Promise异常。
+我们可以在全局对象上注册一个`unhandledrejection`事件，去处理那些代码中没有被手动捕获的Promise异常。
 
 ```javascript
 //在浏览器中
@@ -271,21 +271,21 @@ process.on('unhandledRejection', (reason, promise) => {
 
 #### Promise.resolve()
 
-直接返回一个状态为fullfilled的Promise对象。
+直接返回一个状态为`fullfilled`的Promise对象。
 
 #### Promise.reject()
 
-直接返回一个状态为rejected的Promise对象。
+直接返回一个状态为`rejected`的Promise对象。
 
 ### Promise并行执行Promise.all()
 
-接收一个数组作为参数，这个数组的每一个元素都是一个Promise对象，当所以的Promise对象的状态确定了之后，返回一个全新的Promise对象，如果传入的Promise对象至少有一个为假，返回的Promise对象则为假，如果传入的Promise全都为真，返回的新的Promise对象则为真，其resolve传入的参数为一个数组，数组中是每一个Promise的resolve参数。
+接收一个数组作为参数，这个数组的每一个元素都是一个Promise对象，当所以的Promise对象的状态确定了之后，返回一个全新的Promise对象，如果传入的Promise对象至少有一个为假，返回的Promise对象则为假，如果传入的Promise全都为真，返回的新的Promise对象则为真，其`resolve`传入的参数为一个数组，数组中是每一个Promise的`resolve`参数。
 
 ### Promise并行执行Promise.race()
 
-和Promise.all()不同的是，Promise.race()只要有一个Promise对象的状态凝固就会立即返回一个新的Promise对象；Promise.all()必须所有的Promise参数对象的状态都凝固才会返回。
+和`Promise.all()`不同的是，`Promise.race()`只要有一个Promise对象的状态凝固就会立即返回一个新的Promise对象；`Promise.all()`必须所有的Promise参数对象的状态都凝固才会返回。
 
-利用Promise.race()可以对异步任务进行超时处理。
+利用`Promise.race()`可以对异步任务进行超时处理。
 
 ### Promise执行实行顺序及宏任务和微任务
 
@@ -310,9 +310,9 @@ console.log('end')
 // timeout end
 ```
 
-上述这段代码，timeout异步和Promise异步都会直接执行其成功的回调，但是最终打印的结果确实Promise end先于timeout打印。为什么呢？先了解两个概念，宏任务和微任务。
+上述这段代码，`timeout`异步和Promise异步都会直接执行其成功的回调，但是最终打印的结果确实Promise end先于`timeout`打印。为什么呢？先了解两个概念，宏任务和微任务。
 
-*（敲黑板）对于延时为0的timeout会立即将回调函数添加到消息队列中*
+*（敲黑板）对于延时为0的`timeout`会立即将回调函数添加到消息队列中*
 
 *（敲黑板）对于内部全是同步程序的Promise，也会作为异步程序将其成功的回调添加到消息队列中等待执行*
 
@@ -505,7 +505,7 @@ G()
 
 这……省去了Genentor函数执行器，就问你香不香？
 
-除此之外，async函数还会返回一个Promise对象，更加利于我们对整体的代码进行控制。
+除此之外，`async`函数还会返回一个Promise对象，更加利于我们对整体的代码进行控制。
 
 ```javascript
 var promise = G()
