--- a/1-1-ES6+.md
+++ b/1-1-ES6+.md
@@ -758,9 +758,9 @@ obj.say()
 
 由于symbol是唯一的，所以我们不可能在创建一个symbol去获取obj的对应属性，因此就可以实现对象的私有成员。
 
-**截至ES2019一共有7种原始数据类型**
+**截至ES2019一共有6种原始数据类型**
 
-`boolean` `null` `undefined` `number` `string` `symbol` `object`
+`boolean` `null` `undefined` `number` `string` `symbol`
 
 **未来还会新增一种叫BigInt的数据类型存放更长的数字**
 
