--- a/1-2-JS异步编程.md
+++ b/1-2-JS异步编程.md
@@ -222,7 +222,7 @@ ajax('data/user.json').then(function(res){
 
 由上面的代码可以知道，其实`.catch()`虽然可以作为Promise失败的回调，但是实际上，它是他前面的`.then()`返回的Promise的失败的回调。因为这是在同一个Promise的链条上面，第一个Promise的异常状态会一直往下传递。所以在`.catch()`中才能捕获到第一个Promise中的错误。
 
-**Promise上面的异常会一直向下传递知道被捕获**
+**Promise上面的异常会一直向下传递直到被捕获**
 
 再补充一个我的小想法
 
